--- a/bounce.css
+++ b/bounce.css
@@ -12,7 +12,18 @@ body{
     height:100px;
     border-radius: 50%;
     background-color: aquamarine;
+    
+/* animation:bounce tells the element to use the keyframe rule bounce that is set below, as well as setting the length of the animation
+   tells the element to reverse direction when it has finished the animation
+   tells the animation to run for an infinite number of times    
+    */    
+    
+    animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
+
+
 
 @keyframes bounce{
     from{transform: translate3d(0,0,0);}
@@ -20,6 +31,6 @@ body{
 }
 
 /* @keyframes is used to control the animation, with from and to setting the start and endpoint. 
-    transform is used to move it along a 3-d axism with the translate3d fucntion taking the inputs o (x,y,z)
+    transform is used to move it along a 3-d axis with the translate3d fucntion taking the inputs o (x,y,z)
     as the ball is only moving up/down, the y value is the only one that changes.
  */
